# ComfyUI-UniRig

./: .gitignore  CLAUDE.md  README.md  __init__.py  comfy-env-root.toml  comfy-env.toml  comfy-test.toml  constants.py  install.py  prestartup_script.py  pyproject.toml  requirements.txt  unirig_nodes.py
.github/workflows/: pr-gate.yml  promote-results.yml  run-tests.yml
assets/: rigged_human.fbx
assets/animation_characters/: mixamo.fbx
assets/animation_templates/mixamo/: Capoeira.fbx  (+4 more)
lib/: blender_apply_animation.py  blender_export_fbx.py  mia_inference.py  model_cache.py
lib/mia/: __init__.py  dataset_mixamo.py  model.py  pipeline.py  utils.py
nodes/: __init__.py  animation.py  auto_rig.py  base.py  comfy-env.toml  direct_export_posed_fbx.py  direct_extract_rest_pose.py  load_model.py  mesh_io.py  mia_auto_rig.py  mia_export.py  mia_inference.py  mia_model_loader.py  model_cache.py  model_loaders.py  orientation_check.py  rest_pose_node.py  skeleton_extraction.py  skeleton_io.py  skeleton_processing.py  skinning.py
nodes/mia/: dataset_mixamo.py  model.py  models_ae.py  pipeline.py  utils.py
nodes/nodes_blender/: __init__.py  _utils.py  animation.py  blender_export_fbx.py  blender_export_posed_fbx.py  blender_extract_mesh_info.py  blender_load_fbx.py  comfy-env.toml  direct_export_posed_fbx.py  direct_extract_rest_pose.py  orientation_check.py  rest_pose_node.py  skeleton_io.py
nodes/nodes_gpu/: __init__.py  auto_rig.py  comfy-env.toml  mia_auto_rig.py  mia_export.py  mia_inference.py  mia_model_loader.py  model_cache.py  model_loaders.py  skeleton_extraction.py  skinning.py  skinning_config.py
nodes/unirig/: __init__.py  attention.py  configs.py  data_order.py  data_vertex_group.py  direct.py  direct_extract_bone_debug.py  download.py  michelangelo_encoder.py  model_parse.py  model_spec.py  parse_encoder.py  ptv3_encoder.py  run.py  serialization.py  tokenizer_parse.py  tokenizer_part.py  tokenizer_spec.py  unirig_ar.py  unirig_skin.py
utils/: mia_export.py  mia_inference.py
web/: viewer_fbx.html
web/js/: mesh_preview_fbx.js  viewer_inline.js
workflows/: apply_animation.json  mia_humanoid.json  rig_human_with_texture.json  rig_human_with_texture_mia.json  rigged_manipulator.json  skeleton_comparison.json  unirig_bird.json  unirig_humanoid.json
(+62 files in other folders)
