[project]
name = "comfyui-unirig"
description = "Automatic skeleton extraction for ComfyUI using UniRig (SIGGRAPH 2025). Self-contained with bundled Blender. This node is a first draft! Please open a github issue if you have any feature requests or problems :)"
version = "1.4.6"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/PozzettiAndrea/ComfyUI-UniRig"

[tool.comfy]
PublisherId = "pznodes"
DisplayName = "UniRig"
Icon = ""
